upgraded footer & added prices & updated oferta & added privat policy

--- a/index.html
+++ b/index.html
@@ -331,6 +331,53 @@
         </section>
         <!-- MARKETING END -->
 
+        <!-- PRICES START -->
+        <section class="section prices__section">
+            <div class="container">
+                <h2 class="prices__title">Тарифы</h2>
+                <div class="prices">
+                    <div class="price">
+                        <div class="month__sum">1 месяц</div>
+                        <div class="full__price">400 ₽</div>
+                        <!-- <div class="price__perday">₽ 14 /день</div> -->
+                        <div class="price__btn">
+                            <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
+                        </div>
+                        <!-- <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container header__button">
+                            <button class="button">
+                                <span>Попробовать</span>
+                            </button>
+                        </a> -->
+                    </div>
+                    <div class="price">
+                        <div class="month__sum">3 месяц</div>
+                        <div class="full__price">1200 ₽</div>
+                        <div class="price__btn">
+                            <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
+                        </div>
+                    </div>
+                    <div class="price">
+                        <div class="month__sum">6 месяц</div>
+                        <div class="full__price">2400 ₽</div>
+                        <div class="price__btn">
+                            <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
+                        </div>
+                    </div>
+                    <div class="price">
+                        <div class="month__sum">12 месяц</div>
+                        <div class="full__price">4800 ₽</div>
+                        <div class="price__btn">
+                            <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="oferta">
+                    <a href="./oferta.docx" download target="_blank">* Подключая один из тарифов вы соглашаетесь с <span>публичной офертой</span>.</a>
+                </div>
+            </div>
+        </section>
+        <!-- PRICES END -->
+
         <!-- FEEDBACKS START -->
         <section class="section feedbacks__section">
             <div class="container">
@@ -851,20 +898,33 @@
     <footer class="footer">
         <div class="top__block">
             <div class="container footer__container">
-                <div class="logo">
-                    Logo
+                <div class="footer__block block__1">
+                    <div class="logo">
+                        Logo
+                    </div>
+                    <a href="https://t.me/freelancer_gobot" target="_blank" class="button__container">
+                        <button class="button">
+                            <span>Перейти в бот</span>
+                        </button>
+                    </a>
                 </div>
-                <a href="./ПУБЛИЧНАЯ ОФЕРТА.docx" download target="_blank" class="button__container">
-                    <button class="button">
-                        <span class="pc__info">Скачать публичную оферту</span>
-                        <span class="mobile__info">Публичная оферта</span>
-                        <svg class="download" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                            <path d="m7 10 5 5 5-5"></path>
-                            <path d="M12 15V3"></path>
-                        </svg>
-                    </button>
-                </a>
+                <div class="footer__block block__2">
+                    <div class="footer__links__head">Bot</div>
+                    <a class="footer__link" href="https://t.me/freelancer_gobot">Отзывы</a>
+                    <a class="footer__link" href="./oferta.docx">Публичная оферта</a>
+                    <a class="footer__link" href="./policy.docx">Политика конфиденциальности</a>
+                </div>
+                <div class="footer__block block__2">
+                    <div class="footer__links__head">Поддержка</div>
+                    <a class="footer__link" href="https://t.me/freelancer_gobot">Поддержка бота</a>
+                    <a class="footer__link" href="https://t.me/freelancer_gobot">Часто задаваемые вопросы</a>
+                </div>
+                <!-- <div class="footer__block block__2">
+                    <div class="footer__links__head">Контактная информация</div>
+                    <a class="footer__link" href="https://t.me/freelancer_gobot">Отзывы</a>
+                    <a class="footer__link" href="./oferta.docx">Публичная оферта</a>
+                    <a class="footer__link" href="./policy.docx">Политика конфиденциальности</a>
+                </div> -->
             </div>
         </div>
         <div class="bottom__block">
