added contacts in footer

--- a/index.html
+++ b/index.html
@@ -919,12 +919,11 @@
                     <a class="footer__link" href="https://t.me/freelancer_gobot">Поддержка бота</a>
                     <a class="footer__link" href="https://t.me/freelancer_gobot">Часто задаваемые вопросы</a>
                 </div>
-                <!-- <div class="footer__block block__2">
+                <div class="footer__block block__2 block__2_4">
                     <div class="footer__links__head">Контактная информация</div>
-                    <a class="footer__link" href="https://t.me/freelancer_gobot">Отзывы</a>
-                    <a class="footer__link" href="./oferta.docx">Публичная оферта</a>
-                    <a class="footer__link" href="./policy.docx">Политика конфиденциальности</a>
-                </div> -->
+                    <a class="footer__link IP" href="">ИП "COLOR DESIGN SCHOOL" <br> БИН/ИИН 060215550524</a>
+                    <a class="footer__link email" href="">niazahmetov@gmail.com</a>
+                </div>
             </div>
         </div>
         <div class="bottom__block">
