--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
                 <div class="prices">
                     <div class="price">
                         <div class="month__sum">1 месяц</div>
-                        <div class="full__price">400 ₽</div>
-                        <!-- <div class="price__perday">₽ 14 /день</div> -->
+                        <div class="full__price">2600 ₸</div>
+                        <!-- <div class="price__perday">₸ 14 /день</div> -->
                         <div class="price__btn">
                             <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
                         </div>
@@ -351,21 +351,21 @@
                     </div>
                     <div class="price">
                         <div class="month__sum">3 месяц</div>
-                        <div class="full__price">1200 ₽</div>
+                        <div class="full__price">7800 ₸</div>
                         <div class="price__btn">
                             <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
                         </div>
                     </div>
                     <div class="price">
                         <div class="month__sum">6 месяц</div>
-                        <div class="full__price">2400 ₽</div>
+                        <div class="full__price">15600 ₸</div>
                         <div class="price__btn">
                             <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
                         </div>
                     </div>
                     <div class="price">
                         <div class="month__sum">12 месяц</div>
-                        <div class="full__price">4800 ₽</div>
+                        <div class="full__price">31000 ₸</div>
                         <div class="price__btn">
                             <a href="https://t.me/freelancer_gobot" class="price__link">Попробовать</a>
                         </div>
